Change folder content to match server's requirement

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,8 +49,6 @@
 </head>
 
 <body ng-app="myPortfolio">
-
-  
     <h1>Ngoc Luu</h1>
     <!-- Navigation bar -->
     <ul>
