--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             font-family: "Raleway", sans-serif;
             font-size: 60px;
         }
-         html, body{
+        
+        html, body{
              font-family: "Raleway", sans-serif;
-         }
+        }
 
         ul {
             list-style-type: none;
@@ -30,17 +31,17 @@
             float: left;
         }
 
-            li a {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
 
-                li a:hover:not(.active) {
-                    background-color: #808080;
-                }
+        li a:hover:not(.active) {
+            background-color: #808080;
+        }
 
         .active {
             background-color: #8600b3;
@@ -58,6 +59,7 @@
         <li><a href="#resume">RESUME</a></li>
     </ul>
 
+    <!--Routing-->
     <div ng-view></div>
     <script>
         var myPortfolio = angular.module("myPortfolio", ["ngRoute"]);
