--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <div class="container">
     <br/><br/>
-    <img src="Images/Capture.JPG" style="width:10%;" class="w3-round">
+    <img src="luungoc.github.io/Images/Capture.JPG" style="width:10%;" class="w3-round">
     <p>Hello, I'm Ngoc (pronouced as /knock/), a software developer based in greater Seattle area.<br/><br />
     
     <h4>Why software development?</h4>
