Updated index, education, and skills, added projects and work
Push all files

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,27 +60,6 @@
         <li><a href="education.html">EDUCATION</a></li>
     </ul>
 
-    <div class="container">
-    <br/><br/>
-    <img src="Images/CAPTURE.JPG" style="width:10%;" class="w3-round">
-    <p>Hello, I'm Ngoc (pronouced as /knock/), a software developer based in greater Seattle area.<br/><br />
-    
-    <h4>Why software development?</h4>
-    <p>
-        I'm passionate in designing and developing technologies that serve everyday life.<br/>
-        Software development to me is the art of science, where the beauty and ease of use of<br/>
-        the UI are in harmony with the logical algorithms.<br /><br />
-    </p>
-
-    <h4>3 Fun Facts about Me</h4>
-    <p>
-        1. I was born in Saigon, Vietnam, whose many similarities with Seattle, WA [in terms of rain and crowd].<br/><br />
-        2. Although I spend most of my time coding, I enjoy reading and cooking. My favorite author<br/>
-        is Dave Barry, and I love cooking all kinds of [good] dishes, from Vietnamese, Chinese cuisines to Italian one.<br/><br />
-        3. Music is an essential part of my life. I play organ and ukulele, and compose songs occasionally.
-    </p>
-
-</div>
 
 </body>
 </html>
