--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <ul>
         <li><a class="active" href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
+        <li><a href="work.html">WORK</a></li>
         <li><a href="projects.html">PROJECTS</a></li>
-        <li><a href="resume.html">RESUME</a></li>
+        <li><a href="skills.html">SKILLS</a></li>
+        <li><a href="education.html">EDUCATION</a></li>
     </ul>
 
 </body>
