--- a/about.html
+++ b/about.html
@@ -7,16 +7,18 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
             font-family: "Raleway", sans-serif;
             font-size: 60px;
         }
-         html, body{
+        
+        html, body{
              font-family: "Raleway", sans-serif;
-         }
+        }
 
         ul {
             list-style-type: none;
@@ -30,20 +32,20 @@
             float: left;
         }
 
-            li a {
+        li a {
                 display: block;
                 color: white;
                 text-align: center;
                 padding: 14px 16px;
                 text-decoration: none;
-            }
+        }
 
-                li a:hover:not(.active) {
-                    background-color: #808080;
-                }
+        li a:hover:not(.active) {
+                background-color: #808080;
+        }
 
         .active {
-            background-color: #8600b3;
+                background-color: #8600b3;
         }
     </style>
 </head>
@@ -61,24 +63,25 @@
     </ul>
 
     <div class="container">
-    <br/><br/>
-    <img src="Images/CAPTURE.JPG" style="width:10%;" class="w3-round">
+    <br/>
+    <!--<img src="Images/CAPTURE.JPG" style="width:10%;" class="w3-round">-->
     <img src="luungoc.github.io/Images/Capture.JPG" style="width:10%;" class="w3-round">
-    <p>Hello, I'm Ngoc (pronouced as /knock/), a software developer based in greater Seattle area.<br/><br />
+    <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
     
-    <h4>Why software development?</h4>
+    <h4><b>Why software development?</b></h4>
     <p>
         I'm passionate in designing and developing technologies that serve everyday life.<br/>
-        Software development to me is the art of science, where the beauty and ease of use of<br/>
-        the UI are in harmony with the logical algorithms.<br /><br />
+        Software development to me is the art of science, where the beauty and ease of use of the UI <br/>
+        are in harmony with the logical algorithms.<br /><br/>
     </p>
 
-    <h4>3 Fun Facts about Me</h4>
+    <h4><b>3 Fun Facts about Me</b></h4>
     <p>
-        1. I was born in Saigon, Vietnam, whose many similarities with Seattle, WA [in terms of rain and crowd].<br/><br />
-        2. Although I spend most of my time coding, I enjoy reading and cooking. My favorite author<br/>
-        is Dave Barry, and I love cooking all kinds of [good] dishes, from Vietnamese, Chinese cuisines to Italian one.<br/><br />
-        3. Music is an essential part of my life. I play organ and ukulele, and compose songs occasionally.
+        1. I was born in Saigon, Vietnam, whose many similarities with Seattle, WA [in terms of rain and crowd].<br/><br/>
+        2. Although I spend most of my time coding, I enjoy reading and cooking. My favorite authors are <br/>
+        Roald Dahl and Dave Barry, and I love cooking all kinds of [good] dishes.<br/><br/>
+        3. Music is an essential part of my life. I enjoy listening to music, playing  organ and ukulele, and <br/>
+       compose songs occasionally.
     </p>
 
 </div>
