--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
             font-family: "Raleway", sans-serif;
             font-size: 60px;
         }
-         html, body{
+        
+        html, body{
              font-family: "Raleway", sans-serif;
-         }
+        }
 
         ul {
             list-style-type: none;
@@ -30,20 +32,20 @@
             float: left;
         }
 
-            li a {
+        li a {
                 display: block;
                 color: white;
                 text-align: center;
                 padding: 14px 16px;
                 text-decoration: none;
-            }
+        }
 
-                li a:hover:not(.active) {
-                    background-color: #808080;
-                }
+        li a:hover:not(.active) {
+                background-color: #808080;
+        }
 
         .active {
-            background-color: #8600b3;
+                background-color: #8600b3;
         }
     </style>
 </head>
