--- a/work.html
+++ b/work.html
@@ -7,16 +7,18 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
             font-family: "Raleway", sans-serif;
             font-size: 60px;
         }
-         html, body{
+        
+        html, body{
              font-family: "Raleway", sans-serif;
-         }
+        }
 
         ul {
             list-style-type: none;
@@ -30,20 +32,20 @@
             float: left;
         }
 
-            li a {
+        li a {
                 display: block;
                 color: white;
                 text-align: center;
                 padding: 14px 16px;
                 text-decoration: none;
-            }
+        }
 
-                li a:hover:not(.active) {
-                    background-color: #808080;
-                }
+        li a:hover:not(.active) {
+                background-color: #808080;
+        }
 
         .active {
-            background-color: #8600b3;
+                background-color: #8600b3;
         }
     </style>
 </head>
@@ -59,5 +61,57 @@
         <li><a href="skills.html">SKILLS</a></li>
         <li><a href="education.html">EDUCATION</a></li>
     </ul>
+    <br/>
+
+    <!--Job 1-->
+    <h4><b>Software Development Intern-Tyler Technologies, Inc.</b><br/>
+        Renton, WA, USA<br/>
+        June 2016 - Current 
+    </h4>
+    <h5><b>Project: Employee Skills Program (ESP)</b><br/>
+        As the 2016 intern project at Tyler Technologies, Inc.,<br/>
+        Employee Skills Program is an internal search engine <br/>
+        for searching employees with specific skill sets.<br/><br/>
+
+        <b>Project type:</b><br/>
+        Full stack development<br/><br/>
+
+        <b>My focus:</b><br/>
+        Back-end<br/><br/>
+
+        <b>Tools and technologies:</b><br/>
+        ElasticSearch, ElasticSearch.NET<br/>
+        Elastic Nest, C#, and SQL.<br/><br/>  
+
+        <b>Skills obtained:</b><br/>
+        Full stack development<br/>
+        SCRUM Master<br/>
+    </h5><br/>
+
+    <!--Job 2-->
+    <h4><b>Computer Science Tutor-Quantitative Skills Center</b><br/>
+        <b>University of Washington Bothell</b><br/>  
+        Bothell, WA, USA<br/>
+        Sep 2015 - June 2016
+    </h4>
+
+    <h5><b>Specialized in</b> Java, C++, and SQLite<br/><br/>
+        Assisting students with data structures, algorithms,<br/> 
+        discrete math, and debugging techniques<br/>
+    <h5><br/>
+
+    <!--Job 3-->
+    <h4><b>Peer Tutor-Quantitative Skills Center</b><br/>
+        <b>University of Washington Bothell</b><br/>  
+        Bothell, WA, USA<br/>
+        Jan 2015 - June 2016
+    </h4>
+
+    <h5><b>Specialized in</b> Java, C++, SQLite, Statistics, Calculus,<br/> 
+        Financial & Managerial Accounting, and Economics<br/><br/>
+        Assisting students with understanding quantitative<br/>
+        concepts, enhancing independent learning process,<br/>
+        and building confidence in quantitative materials<br/> 
+    <h5>
 </body>
 </html>
