Updated projects.html and about.html
Added carousel for Billet project in projects.html
Removed container from about.html

--- a/skills.html
+++ b/skills.html
@@ -52,6 +52,7 @@
 
 <body ng-app="myPortfolio">
     <h1>Ngoc Luu</h1>
+
     <!-- Navigation bar -->
     <ul>
         <li><a class="active" href="index.html">HOME</a></li>
@@ -71,7 +72,7 @@
             <br/><br/>
 
         <b>Framework</b><br/>
-            Familiar with Angular JS
+            Familiar with .NET, AngularJS
             <br/><br/>
 
         <b>Operating Systems</b><br/>
