--- a/projects.html
+++ b/projects.html
@@ -47,11 +47,18 @@
         .active {
                 background-color: #8600b3;
         }
+
+        .carousel-inner > .item > img,
+        .carousel-inner > .item > a > img {
+            width: 70%;
+            margin: auto;
+        }
     </style>
 </head>
 
 <body ng-app="myPortfolio">
     <h1>Ngoc Luu</h1>
+
     <!-- Navigation bar -->
     <ul>
         <li><a class="active" href="index.html">HOME</a></li>
@@ -62,6 +69,52 @@
         <li><a href="education.html">EDUCATION</a></li>
     </ul>
 
+    <!-- Carousel -->
+     <div class="container">
+        <br/><br/><br/>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
 
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="luungoc.github.io/Images/Billet1.png" alt="Billet1" width="460" height="345">
+                </div>
+
+                <div class="item">
+                    <img src="luungoc.github.io/Images/Billet2.png" alt="Billet2" width="460" height="345">
+                </div>
+            
+                <div class="item">
+                    <img src="luungoc.github.io/Images/Billet3.png" alt="Billet3" width="460" height="345">
+                </div>
+
+                <div class="item">
+                    <img src="luungoc.github.io/Images/Billet4.png" alt="Billet4" width="460" height="345">
+                </div>
+
+                <div class="item">
+                    <img src="luungoc.github.io/Images/Billet5.png" alt="Billet5" width="460" height="345">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
