--- a/projects.html
+++ b/projects.html
@@ -85,6 +85,12 @@
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img src="luungoc.github.io/Images/Billet1.png" alt="Billet1" width="100" height="200">
+
+                    <div class="carousel-caption"> 
+                        <h3>
+                            Billet - Online Ticket App
+                        </h3>
+                    </div>
                 </div>
 
                 <div class="item">
