--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,12 @@
             font-family: "Raleway", sans-serif;
             font-size: 60px;
         }
+
+        h3{
+            font-family: "Raleway", sans-serif;
+            font-size: 60px;
+            color: #6600ff;
+        }
         
         html, body{
              font-family: "Raleway", sans-serif;
