Test carousel's caption

--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,8 @@
 
                     <div class="carousel-caption"> 
                         <h3>
-                            Billet - Online Ticket App
+                            Billet <br/>
+                            Online Ticket App
                         </h3>
                     </div>
                 </div>
