--- a/about.html
+++ b/about.html
@@ -96,11 +96,11 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="luungoc.github.io/Images/About1.png" alt="About1" width="100" height="200">              
+                    <img src="luungoc.github.io/Images/About1.png" alt="About1" width="300" height="400">              
                 </div>
 
                 <div class="item">
-                    <img src="luungoc.github.io/Images/About2.png" alt="About2" width="100" height="200">
+                    <img src="luungoc.github.io/Images/About2.png" alt="About2" width="300" height="2=400">
                 </div>
             </div>
 
