--- a/about.html
+++ b/about.html
@@ -91,16 +91,17 @@
             <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="luungoc.github.io/Images/About1.png" alt="About1" width="300" height="400">              
+                    <img src="luungoc.github.io/Images/About1.png" alt="About1" width="500" height="600">              
                 </div>
 
                 <div class="item">
-                    <img src="luungoc.github.io/Images/About2.png" alt="About2" width="300" height="2=400">
+                    <img src="luungoc.github.io/Images/About2.png" alt="About2" width="500" height="600">
                 </div>
             </div>
 
