--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
         }
         
         html, body{
+             margin: 30%,
              font-family: "Raleway", sans-serif;
         }
 
@@ -63,8 +64,7 @@
     </ul>
 
     <br/>
-    <!--<img src="Images/CAPTURE.JPG" style="width:10%;" class="w3-round">-->
-   <!--<img src="luungoc.github.io/Images/Capture.JPG" style="width:10%;" class="w3-round">
+    <img src="luungoc.github.io/Images/Capture.JPG" style="width:10%;" class="w3-round">
     <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
     
     <h4><b>Why software development?</b></h4>
@@ -81,41 +81,6 @@
         Roald Dahl and Dave Barry, and I love cooking all kinds of [good] dishes.<br/><br/>
         3. Music is an essential part of my life. I enjoy listening to music, playing  organ and ukulele, and <br/>
        compose songs occasionally.
-    </p>-->
-
-     <!-- Carousel -->
-     <div class="container">
-        <br/><br/><br/>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="luungoc.github.io/Images/About1.png" alt="About1" width="500" height="600">              
-                </div>
-
-                <div class="item">
-                    <img src="luungoc.github.io/Images/About2.png" alt="About2" width="500" height="600">
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
+    </p>
 </body>
 </html>
