--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         }
         
         html, body{
-             margin: 30%,
+             width: 30%;
              font-family: "Raleway", sans-serif;
         }
 
@@ -34,19 +34,19 @@
         }
 
         li a {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
         }
 
         li a:hover:not(.active) {
-                background-color: #808080;
+            background-color: #808080;
         }
 
         .active {
-                background-color: #8600b3;
+            background-color: #8600b3;
         }
     </style>
 </head>
