--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         }
         
         html, body{
-             width: 30%;
+             text-align: center;
              font-family: "Raleway", sans-serif;
         }
 
