--- a/about.html
+++ b/about.html
@@ -17,8 +17,20 @@
         }
         
         html, body{
-             text-align: center;
              font-family: "Raleway", sans-serif;
+        }
+
+        div{
+            margin-top: 150px;
+        }
+
+        h4{
+            margin-left: 300px;
+        }
+
+        p{
+            margin-top: 20px;
+            margin-left: 300px;
         }
 
         ul {
@@ -63,8 +75,8 @@
         <li><a href="education.html">EDUCATION</a></li>
     </ul>
 
-    <br/>
-    <img src="luungoc.github.io/Images/Capture.JPG" style="width:10%;" class="w3-round">
+    <div>
+    <img src="luungoc.github.io/Images/Capture.JPG" style="width:10%; position: relative; left: 300px;" class="w3-round">
     <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
     
     <h4><b>Why software development?</b></h4>
@@ -82,5 +94,6 @@
         3. Music is an essential part of my life. I enjoy listening to music, playing  organ and ukulele, and <br/>
        compose songs occasionally.
     </p>
+    </div>
 </body>
 </html>
