Align text and images

--- a/education.html
+++ b/education.html
@@ -20,6 +20,19 @@
              font-family: "Raleway", sans-serif;
         }
 
+        div{
+            margin-top: 50px;
+        }
+
+        h4, h5{
+            margin-left: 80px;
+        }
+
+        p{
+            margin-top: 20px;
+            margin-left: 80px;
+        }
+
         ul {
             list-style-type: none;
             margin: 0;
@@ -62,24 +75,24 @@
         <li><a href="education.html">EDUCATION</a></li>
     </ul>
     <br/>
-     
-    <h4><b>Bachelor of Science in Computer Science and Software Engineering<br/>
-        University of Washington Bothell-Bothell, WA, USA<br/>
-        Class of 2017</b>
-    </h4>
-    <h5>Cumulative GPA: 3.94<br/>
-        Dean's List Autumn 2014, Winter 2014<br/>
-        Annual Dean's List 2015-2016
-    </h5><br/>
+    <div>
+        <h4><b>Bachelor of Science in Computer Science and Software Engineering<br/>
+            University of Washington Bothell-Bothell, WA, USA<br/>
+            Class of 2017</b>
+        </h4>
+        <h5>Cumulative GPA: 3.94<br/>
+            Dean's List Autumn 2014, Winter 2014<br/>
+            Annual Dean's List 2015-2016
+        </h5><br/>
 
-
-    <h4><b>Associate of Arts in Business Administration<br/>
-        Seattle Central College-Seattle, WA, USA<br/>
-        Class of 2014</b>
-    </h4>
-    <h5>Cumulative GPA: 3.94<br/>
-        Dean's List and President's List 2012-2014<br/>
-        Phi Theta Kappa Honor Society
-    <h5>
+        <h4><b>Associate of Arts in Business Administration<br/>
+            Seattle Central College-Seattle, WA, USA<br/>
+            Class of 2014</b>
+        </h4>
+        <h5>Cumulative GPA: 3.94<br/>
+            Dean's List and President's List 2012-2014<br/>
+            Phi Theta Kappa Honor Society
+        <h5>
+    </div>
 </body>
 </html>
