--- a/skills.html
+++ b/skills.html
@@ -20,6 +20,19 @@
              font-family: "Raleway", sans-serif;
         }
 
+        div{
+            margin-top: 50px;
+        }
+
+        h4, h5{
+            margin-left: 80px;
+        }
+
+        p{
+            margin-top: 20px;
+            margin-left: 80px;
+        }
+
         ul {
             list-style-type: none;
             margin: 0;
@@ -64,7 +77,7 @@
     </ul>
     <br/>
 
-    <p>
+    <div>
         <h4><b>TECHNICAL SKILLS</b></h4>
         <h5><b>Programming Languages</b><br/>
             Proficient in Java, C++<br/>
@@ -92,6 +105,6 @@
         <h5>Proficient in technical writing<br/>
         Familiar with Agile Software Process, and Systems Development Life Cycle (SDLC)
         </h5>
-
+    </div>
 </body>
 </html>
