--- a/work.html
+++ b/work.html
@@ -20,6 +20,19 @@
              font-family: "Raleway", sans-serif;
         }
 
+        div{
+            margin-top: 50px;
+        }
+
+        h4, h5{
+            margin-left: 80px;
+        }
+
+        p{
+            margin-top: 20px;
+            margin-left: 80px;
+        }
+
         ul {
             list-style-type: none;
             margin: 0;
