Styling (color palette and font)
Styling all pages with indigo palette and Open Sans

--- a/education.html
+++ b/education.html
@@ -9,23 +9,32 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
-            font-family: "Raleway", sans-serif;
+            font-family: "Open Sans", sans-serif;
             font-size: 60px;
+            color: #303F9F;
         }
         
         html, body{
-             font-family: "Raleway", sans-serif;
+             font-family: "Open Sans", sans-serif;
         }
+
 
         div{
             margin-top: 50px;
         }
 
-        h4, h5{
+        h4{
             margin-left: 80px;
+            color: #3F51B5;
+        }
+
+        h5{
+            margin-left: 80px;
+            color: black;
         }
 
         p{
@@ -38,7 +47,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #333;
+            background-color: #3F51B5;
         }
 
         li {
@@ -54,11 +63,11 @@
         }
 
         li a:hover:not(.active) {
-                background-color: #808080;
+            background-color: #9FA8DA;
         }
 
         .active {
-                background-color: #8600b3;
+            background-color: #303F9F;
         }
     </style>
 </head>
@@ -77,8 +86,8 @@
     <br/>
     <div>
         <h4><b>Bachelor of Science in Computer Science and Software Engineering<br/>
-            University of Washington Bothell-Bothell, WA, USA<br/>
-            Class of 2017</b>
+            University of Washington Bothell-Bothell, WA, USA<br/></b>
+            Class of 2017
         </h4>
         <h5>Cumulative GPA: 3.94<br/>
             Dean's List Autumn 2014, Winter 2014<br/>
@@ -86,8 +95,8 @@
         </h5><br/>
 
         <h4><b>Associate of Arts in Business Administration<br/>
-            Seattle Central College-Seattle, WA, USA<br/>
-            Class of 2014</b>
+            Seattle Central College-Seattle, WA, USA<br/></b>
+            Class of 2014
         </h4>
         <h5>Cumulative GPA: 3.94<br/>
             Dean's List and President's List 2012-2014<br/>
