--- a/about.html
+++ b/about.html
@@ -9,23 +9,28 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
-            font-family: "Raleway", sans-serif;
+            font-family: "Open Sans", sans-serif;
             font-size: 60px;
+            color: #303F9F; 
         }
         
         html, body{
-             font-family: "Raleway", sans-serif;
+             font-family: "Open Sans", sans-serif;
         }
 
+
         div{
-            margin-top: 150px;
+            margin-top: 100px;
+            align: center;
         }
 
         h4{
             margin-left: 80px;
+            color: #3F51B5;
         }
 
         p{
@@ -38,7 +43,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #333;
+            background-color: #3F51B5;
         }
 
         li {
@@ -54,11 +59,11 @@
         }
 
         li a:hover:not(.active) {
-            background-color: #808080;
+            background-color: #9FA8DA;
         }
 
         .active {
-            background-color: #8600b3;
+            background-color: #303F9F;
         }
     </style>
 </head>
