--- a/work.html
+++ b/work.html
@@ -9,23 +9,31 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
-            font-family: "Raleway", sans-serif;
+            font-family: "Open Sans", sans-serif;
             font-size: 60px;
+            color: #303F9F;
         }
         
         html, body{
-             font-family: "Raleway", sans-serif;
+             font-family: "Open Sans", sans-serif;
         }
 
         div{
             margin-top: 50px;
         }
 
-        h4, h5{
+        h4{
             margin-left: 80px;
+            color: #3F51B5;
+        }
+
+        h5{
+            margin-left: 80px;
+            color: black;
         }
 
         p{
@@ -38,7 +46,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #333;
+            background-color: #3F51B5;
         }
 
         li {
@@ -54,11 +62,11 @@
         }
 
         li a:hover:not(.active) {
-                background-color: #808080;
+            background-color: #9FA8DA;
         }
 
         .active {
-                background-color: #8600b3;
+            background-color: #303F9F;
         }
     </style>
 </head>
@@ -80,24 +88,24 @@
     <!--Job 1-->
     <h4><b>Software Development Intern-Tyler Technologies, Inc.</b><br/>
         Renton, WA, USA<br/>
-        June 2016 - Current 
+        June 2016 - Current
     </h4>
-    <h5><b>Project: Employee Skills Program (ESP)</b><br/>
+    <h5><b style="color: #3F51B5">Project: Employee Skills Program (ESP)</b><br/>
         As the 2016 intern project at Tyler Technologies, Inc.,<br/>
         Employee Skills Program is an internal search engine <br/>
         for searching employees with specific skill sets.<br/><br/>
 
-        <b>Project type:</b><br/>
+        <b style="color: #3F51B5">Project type:</b><br/>
         Full stack development<br/><br/>
 
-        <b>My focus:</b><br/>
+        <b style="color: #3F51B5">My focus:</b><br/>
         Back-end<br/><br/>
 
-        <b>Tools and technologies:</b><br/>
+        <b style="color: #3F51B5">Tools and technologies:</b><br/>
         ElasticSearch, ElasticSearch.NET<br/>
         Elastic Nest, C#, and SQL.<br/><br/>  
 
-        <b>Skills obtained:</b><br/>
+        <b style="color: #3F51B5">Skills obtained:</b><br/>
         Full stack development<br/>
         SCRUM Master<br/>
     </h5><br/>
