--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         h1 {
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
+            color: #303F9F; 
         }
         
         html, body{
