Updated skill.html and work.html content

--- a/skills.html
+++ b/skills.html
@@ -88,10 +88,10 @@
         <h4><b>Technical Skills</b></h4>
         <h5><b style="color: #3F51B5">Programming Languages</b><br/>
             Proficient in Java, C++<br/>
-            Familiar with SQLite, SQL, Python, C#, HTML, CSS, Assembly
+            Familiar with SQL, Python, C#, HTML, CSS, JavaScript, TypeScript, Assembly
             <br/><br/>
 
-        <b style="color: #3F51B5">Framework</b><br/>
+        <b style="color: #3F51B5">Frameworks</b><br/>
             Familiar with .NET, AngularJS
             <br/><br/>
 
@@ -104,7 +104,7 @@
             <br/><br/>
         
         <b style="color: #3F51B5">Other skills</b><br/>
-            Familiar with UI/UX design, software analysis and architectural design
+            Familiar with UI/UX design (Google Materials and AngularJS Materials),<br/> software analysis and architectural design
             <br/><br/>
         </h5>
 
