--- a/work.html
+++ b/work.html
@@ -91,23 +91,26 @@
         June 2016 - Current
     </h4>
     <h5><b style="color: #3F51B5">Project: Employee Skills Program (ESP)</b><br/>
-        As the 2016 intern project at Tyler Technologies, Inc.,<br/>
+        As a 2016 intern project at Tyler Technologies, Inc.,<br/>
         Employee Skills Program is an internal search engine <br/>
         for searching employees with specific skill sets.<br/><br/>
 
         <b style="color: #3F51B5">Project type:</b><br/>
         Full stack development<br/><br/>
 
-        <b style="color: #3F51B5">My focus:</b><br/>
-        Back-end<br/><br/>
+        <b style="color: #3F51B5">My focuses:</b><br/>
+        Back-end<br/>
+        Integrating front-end and back-end<br/><br/>  
 
         <b style="color: #3F51B5">Tools and technologies:</b><br/>
         ElasticSearch, ElasticSearch.NET<br/>
-        Elastic Nest, C#, and SQL.<br/><br/>  
+        JavaScript, TypeScript, HTML/CSS, Elastic Nest, C#, and SQL<br/>
+        JIRA, Confluence, BitBucket, Git<br/><br/>
 
         <b style="color: #3F51B5">Skills obtained:</b><br/>
         Full stack development<br/>
-        SCRUM Master<br/>
+        Pair programming<br/>
+        SCRUM Master
     </h5><br/>
 
     <!--Job 2-->
