update profile pic link ref

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </ul>
 
     <div>
-        <img src="luungoc.github.io/Images/Profile.JPG" style="width:10%; position: relative; left: 80px;" class="w3-round">
+        <img src="luungoc.github.io/Images/Profile.jpg" style="width:10%; position: relative; left: 80px;" class="w3-round">
         <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
         
         <h4><b>Why software development?</b></h4>
