--- a/work.html
+++ b/work.html
@@ -103,7 +103,7 @@
         Integrating front-end and back-end<br/><br/>  
 
         <b style="color: #3F51B5">Tools and technologies:</b><br/>
-        ElasticSearch, ElasticSearch.NET<br/>
+        ElasticSearch, ElasticSearch.NET,<br/>
         JavaScript, TypeScript, HTML/CSS, Elastic Nest, C#, and SQL<br/>
         JIRA, Confluence, BitBucket, Git<br/><br/>
 
