--- a/education.html
+++ b/education.html
@@ -90,8 +90,9 @@
             Class of 2017
         </h4>
         <h5>Cumulative GPA: 3.9<br/>
-            Dean's List Autumn 2014, Winter 2014<br/>
+            Baccalaureate Honor: Magna Cum Laude
             Annual Dean's List 2015-2016
+            Dean's List Autumn 2014, Winter 2014<br/>
         </h5><br/>
 
         <h4><b>Associate of Arts in Business Administration<br/>
