--- a/skills.html
+++ b/skills.html
@@ -87,8 +87,8 @@
     <div>
         <h4><b>Technical Skills</b></h4>
         <h5><b style="color: #3F51B5">Programming Languages</b><br/>
-            Proficient in Java, C++<br/>
-            Familiar with SQL, Python, C#, HTML, CSS, JavaScript, TypeScript, Assembly
+            Proficient in C#, Java<br/>
+            Familiar with TypeScript, HTML/CSS, SQL, Python, C++
             <br/><br/>
 
         <b style="color: #3F51B5">Frameworks</b><br/>
