--- a/skills.html
+++ b/skills.html
@@ -100,7 +100,7 @@
             <br/><br/>
         
         <b style="color: #3F51B5">Version Controls</b><br/>
-            Familiar with GitHub, BitBucket
+            Familiar with Git Bash, GitHub, BitBucket
             <br/><br/>
         
         <b style="color: #3F51B5">Other skills</b><br/>
