--- a/about.html
+++ b/about.html
@@ -18,24 +18,24 @@
             color: #303F9F; 
         }
         
-        html, body{
+        html, body {
              font-family: "Open Sans", sans-serif;
         }
 
 
-        div{
+        div {
             margin-top: 100px;
             align: center;
         }
 
-        h4{
-            margin-left: 80px;
+        h4 {
+            margin-left: 0;
             color: #3F51B5;
         }
 
-        p{
-            margin-top: 20px;
-            margin-left: 80px;
+        p {
+            margin-top: 0;
+            margin-left: 0;
         }
 
         ul {
@@ -81,7 +81,7 @@
     </ul>
 
     <div>
-        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%;position: relative; left: 80px;" class="w3-round">
+        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%;position: relative;" class="w3-round">
         <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
         
         <h4><b>Why software development?</b></h4>
