--- a/education.html
+++ b/education.html
@@ -18,28 +18,28 @@
             color: #303F9F;
         }
         
-        html, body{
+        html, body {
              font-family: "Open Sans", sans-serif;
         }
 
 
-        div{
-            margin-top: 50px;
+        div {
+            margin-top: 0;
         }
 
-        h4{
-            margin-left: 80px;
+        h4 {
+            margin-left: 0;
             color: #3F51B5;
         }
 
-        h5{
-            margin-left: 80px;
+        h5 {
+            margin-left: 0;
             color: black;
         }
 
         p{
-            margin-top: 20px;
-            margin-left: 80px;
+            margin-top: 0;
+            margin-left: 0;
         }
 
         ul {
