Reverted image css to have class "w3-round"

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </ul>
 
     <div>
-        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%; margin: 0 0 0 0"> <!--class="w3-round"-->
+        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%; margin: 0 0 0 0" class="w3-round">
         <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
         
         <h4><b>Why software development?</b></h4>
