--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
         div {
             margin-top: 100px;
-            align: center;
+            /* align: center; */
         }
 
         h4 {
