Fixed alignment and spacing

--- a/work.html
+++ b/work.html
@@ -13,6 +13,7 @@
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
+            margin: 0 0 0 8px;
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
             color: #303F9F;
@@ -23,27 +24,30 @@
         }
 
         div {
-            margin-top:0x;
+            margin: 0 0 16px 8px;
         }
 
         h4 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: #3F51B5;
         }
 
         h5 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: black;
         }
 
-        p{
-            margin-top: 0;
-            margin-left: 0;
+        p {
+            margin: 0 0 8px 8px;
+        }
+
+        b {
+            margin: 0 0 0 8px;
         }
 
         ul {
             list-style-type: none;
-            margin: 0;
+            margin: 0 0 8px 8px;
             padding: 0;
             overflow: hidden;
             background-color: #3F51B5;
@@ -87,56 +91,56 @@
 
     <!--Job 1-->
     <h4><b>Software Development Intern-Tyler Technologies, Inc.</b><br/>
-        Renton, WA, USA<br/>
-        June 2016 - Current
+        <p>Renton, WA, USA<br/>
+        June 2016 - Current</p>
     </h4>
     <h5><b style="color: #3F51B5">Project: Employee Skills Program (ESP)</b><br/>
-        As a 2016 intern project at Tyler Technologies, Inc.,<br/>
+        <p>As a 2016 intern project at Tyler Technologies, Inc.,<br/>
         Employee Skills Program is an internal search engine <br/>
-        for searching employees with specific skill sets.<br/><br/>
+        for searching employees with specific skill sets.<br/><br/></p>
 
         <b style="color: #3F51B5">Project type:</b><br/>
-        Full stack development<br/><br/>
+        <p>Full stack development<br/><br/></p>
 
         <b style="color: #3F51B5">My focuses:</b><br/>
-        Back-end<br/>
-        Integrating front-end and back-end<br/><br/>  
+        <p>Back-end<br/>
+        Integrating front-end and back-end<br/><br/></p>  
 
         <b style="color: #3F51B5">Tools and technologies:</b><br/>
-        ElasticSearch, ElasticSearch.NET,<br/>
+        <p>ElasticSearch, ElasticSearch.NET,<br/>
         JavaScript, TypeScript, HTML/CSS, Elastic Nest, C#, and SQL<br/>
-        JIRA, Confluence, BitBucket, Git<br/><br/>
+        JIRA, Confluence, BitBucket, Git<br/><br/></p>
 
         <b style="color: #3F51B5">Skills obtained:</b><br/>
-        Full stack development<br/>
+        <p>Full stack development<br/>
         Pair programming<br/>
-        SCRUM Master
+        SCRUM Master</p>
     </h5><br/>
 
     <!--Job 2-->
     <h4><b>Computer Science Tutor-Quantitative Skills Center</b><br/>
         <b>University of Washington Bothell</b><br/>  
-        Bothell, WA, USA<br/>
-        Sep 2015 - June 2016
+        <p>Bothell, WA, USA<br/>
+        Sep 2015 - June 2016</p>
     </h4>
 
     <h5><b>Specialized in</b> Java, C++, and SQLite<br/><br/>
-        Assisting students with data structures, algorithms,<br/> 
-        discrete math, and debugging techniques<br/>
+        <p>Assisting students with data structures, algorithms,<br/> 
+        discrete math, and debugging techniques<br/></p>
     <h5><br/>
 
     <!--Job 3-->
     <h4><b>Peer Tutor-Quantitative Skills Center</b><br/>
         <b>University of Washington Bothell</b><br/>  
-        Bothell, WA, USA<br/>
-        Jan 2015 - June 2016
+        <p>Bothell, WA, USA<br/>
+        Jan 2015 - June 2016</p>
     </h4>
 
     <h5><b>Specialized in</b> Java, C++, SQLite, Statistics, Calculus,<br/> 
-        Financial & Managerial Accounting, and Economics<br/><br/>
+        <p>Financial & Managerial Accounting, and Economics<br/><br/>
         Assisting students with understanding quantitative<br/>
         concepts, enhancing independent learning process,<br/>
-        and building confidence in quantitative materials<br/> 
+        and building confidence in quantitative materials<br/></p>
     <h5>
 </body>
 </html>
