--- a/about.html
+++ b/about.html
@@ -13,34 +13,32 @@
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
+            margin: 0 0 0 8px;
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
             color: #303F9F; 
         }
         
         html, body {
-             font-family: "Open Sans", sans-serif;
+            font-family: "Open Sans", sans-serif;
         }
 
-
         div {
-            margin-top: 100px;
-            /* align: center; */
+            margin: 0 0 16px 8px;
         }
 
         h4 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: #3F51B5;
         }
 
         p {
-            margin-top: 0;
-            margin-left: 0;
+            margin: 0 0 8px 8px;
         }
 
         ul {
             list-style-type: none;
-            margin: 0;
+            margin: 0 0 8px 8px;
             padding: 0;
             overflow: hidden;
             background-color: #3F51B5;
@@ -81,7 +79,7 @@
     </ul>
 
     <div>
-        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%; margin: 0 0 0 0" class="w3-round">
+        <img src="luungoc.github.io/Images/Profile.jpg" style="width:20%; height: 10%; margin: 16px 0 0 8px;" class="w3-round">
         <p>Hello, I'm Ngoc (pronounced as /knock/), a software developer based in Greater Seattle Area.<br/><br/>
         
         <h4><b>Why software development?</b></h4>
