--- a/education.html
+++ b/education.html
@@ -22,24 +22,22 @@
              font-family: "Open Sans", sans-serif;
         }
 
-
         div {
-            margin-top: 0;
+            margin: 0 0 16px 8px;
         }
 
         h4 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: #3F51B5;
         }
 
         h5 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: black;
         }
 
-        p{
-            margin-top: 0;
-            margin-left: 0;
+        p {
+            margin: 0 0 8px 8px;
         }
 
         ul {
