--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 
         ul {
             list-style-type: none;
-            margin: 0;
+            margin: 0 0 8px 8px;
             padding: 0;
             overflow: hidden;
             background-color: #3F51B5;
