--- a/skills.html
+++ b/skills.html
@@ -22,22 +22,21 @@
         }
 
         div {
-            margin-top: 0;
+            margin: 0 0 16px 8px;
         }
 
         h4 {
-            margin-left: 0;
+            margin: 0 0 0 8px;
             color: #3F51B5;
         }
 
         h5 {
-            margin-left: 0;
+            margin: 0 0 16px 8px;
             color: black;
         }
 
         p {
-            margin-top: 0;
-            margin-left: 0;
+            margin: 0 0 16px 8px;
         }
 
         ul {
