Fixed spacing and indentation

--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
+            margin: 0 0 16px 0;
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
             color: #303F9F;
@@ -24,8 +25,8 @@
 
         ul {
             list-style-type: none;
-            margin: 0 0 8px 8px;
-            padding: 0;
+            margin: 0 0 0 0;
+            padding: 0 0 0 0;
             overflow: hidden;
             background-color: #3F51B5;
         }
