--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
-            margin: 0 0 0 8px;
+            margin: 0 0 0 0;
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
             color: #303F9F; 
@@ -24,21 +24,21 @@
         }
 
         div {
-            margin: 0 0 16px 8px;
+            margin: 0 0 16px 0;
         }
 
         h4 {
-            margin: 0 0 0 8px;
+            margin: 0 0 0 0;
             color: #3F51B5;
         }
 
         p {
-            margin: 0 0 8px 8px;
+            margin: 0 0 8px 0;
         }
 
         ul {
             list-style-type: none;
-            margin: 0 0 8px 8px;
+            margin: 0 0 8px 0;
             padding: 0;
             overflow: hidden;
             background-color: #3F51B5;
