--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Ngoc Luu's Portfolio</title>
     <style>
         h1 {
+            margin: 0 0 16px 8px;
             font-family: "Open Sans", sans-serif;
             font-size: 60px;
             color: #303F9F; 
@@ -25,8 +26,8 @@
 
         ul {
             list-style-type: none;
-            margin: 0 0 8px 8px;
-            padding: 0;
+            margin: 0 0 0 0;
+            padding: 0 0 0 0;
             overflow: hidden;
             background-color: #3F51B5;
         }
@@ -36,11 +37,11 @@
         }
 
         li a {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
         }
 
         li a:hover:not(.active) {
