Updated image src in projects.html

--- a/projects.html
+++ b/projects.html
@@ -96,23 +96,23 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="luungoc.github.io/Images/Billet1.png" alt="Billet1" width="100" height="200">              
+                    <img src="Images/Billet1.png" alt="Billet1" width="100" height="200">              
                 </div>
 
                 <div class="item">
-                    <img src="luungoc.github.io/Images/Billet2.png" alt="Billet2" width="100" height="200">
+                    <img src="Images/Billet2.png" alt="Billet2" width="100" height="200">
                 </div>
             
                 <div class="item">
-                    <img src="luungoc.github.io/Images/Billet3.png" alt="Billet3" width="100" height="200">
+                    <img src="Images/Billet3.png" alt="Billet3" width="100" height="200">
                 </div>
 
                 <div class="item">
-                    <img src="luungoc.github.io/Images/Billet4.png" alt="Billet4" width="100" height="200">
+                    <img src="Images/Billet4.png" alt="Billet4" width="100" height="200">
                 </div>
 
                 <div class="item">
-                    <img src="luungoc.github.io/Images/Billet5.png" alt="Billet5" width="100" height="200">
+                    <img src="Images/Billet5.png" alt="Billet5" width="100" height="200">
                 </div>
             </div>
 
